<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_medium"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/alivc_editor_include_import_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/alivc_media_frame_rate"
                android:textColor="@color/text_weak"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/frame_rate_edit"
                style="@style/alivc_record_line_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="@string/alivc_media_frame_rate_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_media_gop"
                android:textColor="@color/text_weak"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/gop_edit"
                style="@style/alivc_record_line_style"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/alivc_media_gop_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_crop_setting_quality"
                android:textColor="@color/text_weak"
                android:textSize="12sp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_video_quality_super"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_quality_super" />

                <Button
                    android:id="@+id/alivc_video_quality_high"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_quality_high" />

                <Button
                    android:id="@+id/alivc_video_quality_normal"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_quality_meidan" />

                <Button
                    android:id="@+id/alivc_video_quality_low"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_quality_low" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_crop_setting_ratio"
                android:textColor="@color/text_weak"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_video_ratio_9_16"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_ratio_9_16" />

                <Button
                    android:id="@+id/alivc_video_ratio_3_4"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_ratio_3_4" />

                <Button
                    android:id="@+id/alivc_video_ratio_1_1"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_ratio_1_1" />

                <Button
                    android:id="@+id/alivc_video_ratio_original"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_ratio_original" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_crop_setting_resolution"
                android:textColor="@color/text_weak"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_resolution_360p"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_resolution_360p" />

                <Button
                    android:id="@+id/alivc_resolution_540p"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_resolution_540p" />

                <Button
                    android:id="@+id/alivc_resolution_720p"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_resolution_720p" />

                <Button
                    android:id="@+id/alivc_resolution_1080p"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_resolution_1080p" />

            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_media_crop_mode"
                android:textColor="@color/text_weak"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/radio_fill"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_mode_fill" />
                <Button
                    android:id="@+id/radio_crop"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_mode_crop" />
            </LinearLayout>

            <TextView
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_crop_setting_codec"
                android:textColor="@color/text_weak"
                android:textSize="12sp" />
            <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_edit_encoder_hardware"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_encoder_hardware" />

                <Button
                    android:id="@+id/alivc_edit_encoder_openh264"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_encoder_openh264" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/start_import"
        android:layout_width="match_parent"
        android:text="@string/alivc_media_start_import"
        android:textColor="@color/text_strong"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/alivc_bg_start_record"
        android:layout_height="44dp" />

</LinearLayout>
